Changes from jTDS 1.1
=====================

09/06/2005 - David Kilzer
 o Applied patch for bug [1277000] "All pipe instances are busy" error not
   handled properly.  Added TestAllPipInstancesAreBusy tool class which is
   used to manually reproduce the error.  Updated "loginTimeout" entry on
   FAQ.  Added more use of Support.linkException() in ConnectionJDBC2
   constructor.
 o Created new Support.isWindowsOS() method to consolidate duplicate code.
   Added SupportUnitTest class to test new method.

08/30/2005 - David Kilzer
 o Updated FAQ to reflect new behavior of the namedPipe parameter since
   patch [1122494] SQL Server Authentication & Named pipes was applied
   in jTDS 1.0.3.

07/27/2005 - Alin Sinpalean
 o Corrected bug [1245775] Column type inconsistency when useLOBs=false.

07/11/2005 - Alin Sinpalean
 o Applied Mike's fix for bugs [1234531] Dates before 01/01/1900 broken due to
   DateTime value markers and [1235845] getTimestamp() returns illegal value
   after getString().

07/05/2005 - Alin Sinpalean
 o Applied Mike's fix for bug [1232733] setFetchSize(0) causes exception.
 o Final fix for bug [1229636] Memory Leak in Prepared Statements.

07/04/2005 - Alin Sinpalean
 o Corrected some build issues with Java 1.3.

07/01/2005 - Alin Sinpalean
 o Applied yet another patch for bug [1229636] Memory Leak in Prepared
   Statements, with a minor change. This seems to finally fix the caching and
   memory leaks; handles are always cached, even if maxStatements=0, retrieved
   from the connection cache and the statement list of handles is implemented
   by a Set, to make sure no memory leaks due to duplicates occur.

06/30/2005 - Alin Sinpalean
 o Corrected bug [1229636] Memory Leak in Prepared Statements, based on Mike's
   initial patch.
 o Realized that my initial fix will not work with maxStatements=0 (as opposed
   to Mike's) so made some more changes.
 o Corrected synchronization issue in ConnectionJDBC2.removeStatement() for the